--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SUPABASE_URL=https://YOUR_PROJECT_ID.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=Paste_Your_Publishable_Key_Here
+NEXT_PUBLIC_SUPABASE_URL=https://budbbllivrpopyjkwfef.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_u0jWkRWTFlrr0CoF93YWzw_h59Ki5GH
