--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.300.0",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "@supabase/supabase-js": "^2.39.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
