feat: Implement a 3D dice roller with UI, custom hook, and integration into DM and player campaign pages.

--- a/package.json
+++ b/package.json
@@ -4,28 +4,43 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:clean": "npm run clean && next dev",
+    "clean": "powershell -Command \"$id = (Get-NetTCPConnection -LocalPort 3000 -ErrorAction SilentlyContinue).OwningProcess; if($id) { Stop-Process -Id $id -Force }; Remove-Item -Path .next -Recurse -Force -ErrorAction SilentlyContinue; Write-Host 'Cleanup Complete'\"",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run"
   },
   "dependencies": {
+    "@3d-dice/dice-box": "^1.1.4",
+    "@3d-dice/dice-box-threejs": "^0.0.12",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/three": "^0.160.0",
     "lucide-react": "^0.300.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "three": "^0.160.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
+    "happy-dom": "^20.3.9",
+    "jsdom": "^27.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.18"
   }
 }
