--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.39.0",
+    "canvas": "^3.2.1",
     "lucide-react": "^0.300.0",
     "next": "14.0.0",
     "react": "^18",
