--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_SUPABASE_URL=https://budbbllivrpopyjkwfef.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_u0jWkRWTFlrr0CoF93YWzw_h59Ki5GH
+NEXT_PUBLIC_SUPABASE_URL= https://budbbllivrpopyjkwfef.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY= sb_publishable_u0jWkRWTFlrr0CoF93YWzw_h59Ki5GH
+GEMINI_API_KEY= AIzaSyCkTCctLYNEgFYSrCWfYcRiG4qeh9kWFm0
