--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/three": "^0.160.0",
     "canvas": "^3.2.1",
     "lucide-react": "^0.300.0",
-    "next": "14.0.0",
+    "next": "^16.1.6",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^2.0.7",
@@ -35,8 +35,8 @@
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "happy-dom": "^20.3.9",
     "jsdom": "^27.0.1",
     "postcss": "^8",
